force-app/main/default/objects/OneCRM__Sync_options__mdt/OneCRM__Sync_options__mdt.object-meta.xml
<CustomObject>
    <label>Sync option</label>
    <pluralLabel>Sync options</pluralLabel>
</CustomObject>