force-app/main/default/objects/OneCRM__Sync_options__mdt/fields/OneCRM__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>