force-app/main/default/objects/OneCRM__Sync_options__mdt/fields/OneCRM__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__SObject_Type__c</fullName>
    <label>SObject Type</label>
    <type>TextArea</type>
</CustomField>