force-app/main/default/objects/OneCRM__Sync_options__mdt/fields/OneCRM__Sync_Delay__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Sync_Delay__c</fullName>
    <label>Sync Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>