force-app/main/default/objects/OneCRM__Sync_options__mdt/fields/OneCRM__Sync_Options__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Sync_Options__c</fullName>
    <label>Sync Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>