force-app/main/default/objects/OneCRM__Sync_options__mdt/fields/OneCRM__Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Sync_Type__c</fullName>
    <label>Sync Type</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>